feat(security): add JwtTokenProvider with the algorithm fixed at construction
FR-11 opens d4np-security: JwtTokenProvider, JwtVerifier, JwtProfile,
JwtClaims, JwksSource and JwtVerificationException on Nimbus under the
ADR-003 hardened profile, with 60 tests including the negative suite and
the RFC 7515/7519 vectors spec section 8 makes first-class.

ADR-003's dependency claim is true in Maven and incomplete under JPMS,
which is the item's headline. It chose Nimbus partly for a "minimal
transitive footprint -- ships its own minimal JSON handling", and
dependency:tree confirms one entry with no transitives. That JSON
handling is a shaded Gson whose java.sql.Date guard catches
ClassNotFoundException -- exhaustive on the class path, blind to JPMS's
third state, present but unreadable. On the module path the JVM raises
IllegalAccessError, the static initialiser dies, and every JSON operation
fails. Nimbus 10.3 declares no java.sql edge, so nothing a consuming
module says can grant it.

Measured across six versions without the flag: 9.37.3 fails, 10.0 fails,
10.0.2 PASSES, 10.1 fails, 10.2 fails, 10.3 fails. 10.0.2 is an island
rather than a trend, so pinning to it would freeze a JOSE implementation
three minor versions back on an accident. The version stays latest and
the failure moves to construction: JwsEngine probes the JSON machinery
and throws naming --add-reads com.nimbusds.jose.jwt=java.sql. ADR-0039.

Two of my own claims were corrected by measurement. HttpClient defaults
to NEVER, not NORMAL, so the explicit setting documents intent and says
nothing about a caller-supplied client -- the clause is enforced by an
explicit 3xx refusal instead. And the RFC 7515 vector's expiry is an
asset: since the signature is checked before any claim, the reason code
proves the HMAC matched the RFC's bytes.

The algorithm is fixed at construction and the header compared against
it, never consulted to select a verifier, so alg=none and algorithm
confusion are refused before a key